Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* pkgcore configuration subsystem now uses chained exceptions.  In
  accessing it, you'll get a ConfigurationError exception (or derivative)
  for any config data errors, or the appropriate exception if you use the
  subsystem incorrectly.  In the process, reporting on errors to the commandline
  is now augmented.


pkgcore 0.7.7.4: Dec 14th, 2011

* pkgcore now requires snakeoil 0.4.6 and higher.

* `pinspect profiles` no longer requires parsing the system configuration.

* COLUMNS now is always 0 or higher to make perl (gentoo bug 394091)
  play nice.

* FEATURES=distcc-pump support was added; issue #21.


pkgcore 0.7.7.3: Dec 8th, 2011

* fixed merging error for gconf files named %gconf, and introduced
  better error messages for those sort of failures.


pkgcore 0.7.7.2: Dec 7th, 2011

* `pquery --attr source_repository --vdb` now correctly returns the
  originating repository.

* pmerge --source-only was added; this disables all binpkg repositories
  from being used for the resolution; binpkg building however still will
  occur if the feature is enabled.

* fixed potential for eclass preloading to use the incorrect repo source.
  This could only be triggered by actual API usage, not from commandline
  usage.

* ebuild package instances now have an officially supported .inherited attribute
  for finding out the eclasses used by a pkg.  In addition, this attribute
  is now installed into the vdb repository, and binpkgs.

* pkgcore no longer adds REQUIRED_USE to vdb nor binpkg; it's a pointless
  metadata key, plus we used to corrupt it.

* fixed bug where portdir write cache wouldn't be created, nor used.
  Wasn't seen primarily due to regen being fast enough it's not a huge
  issue.

* fixed addition stacking issue w/ eclass defined REQUIRED_USE resulting
  in corrupted IUSE.
